# envl

./: Cargo.toml  CmakeLists.txt  README.md  package.json  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docker/: DOCKERFILE
scripts/: build.bat  build.sh
src/: main.c
tests/envl-rs-test/: .envl  .envlconf  .gitignore  Cargo.toml  build.rs  rustfmt.toml
tests/envl-rs-test/src/: envl.rs  main.rs
