[workspace]
resolver = "3"
members = [
    "packages/envl-utils",
    "packages/envl-config",
    "packages/envl-vars",
    "packages/envl-rs",
    "packages/envl-cli",
    "tests/envl-rs-test"
]

[workspace.package]
repository = "https://github.com/ROBOTofficial/envl"
license = "MIT"
edition = "2021"
rust-version = "1.91.0"

[patch.crates-io]
envl = { path = "packages/envl-rs" }
envl-cli = { path = "packages/envl-cli" }
envl-vars = { path = "packages/envl-vars" }
envl-config = { path = "packages/envl-config" }
envl-utils = { path = "packages/envl-utils" }

[workspace.lints.clippy]
