[workspace]
resolver = "3"
members = [
    "packages/envl-utils",
    "packages/envl-config",
    "packages/envl-vars",
    "packages/envl-rs",
    "packages/envl-cli",
    "tests/envl-rs-test"
]

[workspace.package]
version = "0.8.1"
repository = "https://github.com/ROBOTofficial/envl"
license = "MIT"
edition = "2021"
rust-version = "1.91.0"

[workspace.dependencies]
clap = { version = "4.5.46", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
thiserror = { version = "2.0.16" }
regex = { version = "1.11.3" }
proc-macro2 = { version = "1.0.101" }
quote = { version = "1.0.40" }
syn = { version = "2.0.106", features = ["full", "extra-traits"] }
envl = { version = "0.8.1", path = "./packages/envl-rs" }
envl-vars = { version = "0.8.1", path = "./packages/envl-vars" }
envl-config = { version = "0.8.1", path = "./packages/envl-config" }
envl-utils = { version = "0.8.1", path = "./packages/envl-utils" }

[patch.crates-io]
envl = { path = "packages/envl-rs" }
envl-cli = { path = "packages/envl-cli" }
envl-vars = { path = "packages/envl-vars" }
envl-config = { path = "packages/envl-config" }
envl-utils = { path = "packages/envl-utils" }

[workspace.lints.clippy]
