[package]
name = "envl-rs-test"
version = "0.1.0"
repository.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
envl = { version = "0.4.0", path = "../../packages/envl-rs" }

[build-dependencies]
envl = { version = "0.4.0", path = "../../packages/envl-rs" }

[lints]
workspace = true
